--- a/genindex.html
+++ b/genindex.html
@@ -581,6 +581,10 @@ document.write(`
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_expression_file.description">description() (barotropy.fluent_automation.fluent_automation.read_expression_file method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.DictionaryValidationError">DictionaryValidationError</a>
 </li>
   </ul></td>
@@ -597,20 +601,22 @@ document.write(`
 </li>
       <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.evaluate_polynomial">evaluate_polynomial() (barotropy.barotropic_model.PolynomialFitter method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.BarotropicModel.export_expressions_cfx">export_expressions_cfx() (barotropy.barotropic_model.BarotropicModel method)</a>
 
       <ul>
         <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter.export_expressions_cfx">(barotropy.barotropic_model.ExpressionExporter method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.BarotropicModel.export_expressions_fluent">export_expressions_fluent() (barotropy.barotropic_model.BarotropicModel method)</a>
 
       <ul>
         <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter.export_expressions_fluent">(barotropy.barotropic_model.ExpressionExporter method)</a>
 </li>
       </ul></li>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_expression_file.expression">expression() (barotropy.fluent_automation.fluent_automation.read_expression_file method)</a>
+</li>
       <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter">ExpressionExporter (class in barotropy.barotropic_model)</a>
 </li>
   </ul></td>
@@ -948,7 +954,7 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.read_configuration_file">read_configuration_file() (in module barotropy.utilities)</a>
 </li>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_expression_file">read_expression_file() (in module barotropy.fluent_automation.fluent_automation)</a>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_expression_file">read_expression_file (class in barotropy.fluent_automation.fluent_automation)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.read_residual_file">read_residual_file() (in module barotropy.fluent_automation.fluent_automation)</a>
 </li>
